--- a/UMS-PROJECT/myums/src/app/users/users.component.html
+++ b/UMS-PROJECT/myums/src/app/users/users.component.html
@@ -35,6 +35,7 @@
       <th>Action</th>
     </tr>
   </thead>
-  <tr app-user *ngFor="let user of users"[user-data]="user">
+  <tr app-user *ngFor="let user of users"[user-data]="user"
+    (onCancellaUser)="onCancellaUser($event)">
   </tr>
 </table>
