--- a/UMS-PROJECT/myums/src/app/user/user.component.html
+++ b/UMS-PROJECT/myums/src/app/user/user.component.html
@@ -41,6 +41,6 @@
 <td>{{ user.phone }}</td>
 <td>{{ user.age }}</td>
 <td>
-  <button (click)="deleteUser(user.id)" class="delete">Delete</button>
-</td>
+  <td><button class="cancella" (click)="cancellaUser()">CANCELLA</button></td>
+<td><button class="aggiungi" (click)="aggiungiUser()">AGGIUNGI</button></td>
 
