update project1/src/app/app.component.html update project1/src/app/app.component.ts update project1/src/app/services/user.service.ts update project1/src/app/user-detail/user-detail.component.ts update project1/src/app/user/user.component.html

--- a/project1/src/app/app.component.html
+++ b/project1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="users">
-    <app-users (updateUser) = "modificaUser($event)"></app-users>
+    <app-users (updateUser) = "updateUser($event)"></app-users>
   </div>
   <div class="userDetail" *ngIf="true">
     <app-user-detail></app-user-detail>
