--- a/project1/src/app/user/user.component.html
+++ b/project1/src/app/user/user.component.html
@@ -8,7 +8,6 @@
 <td>{{ user?.age }}</td>
 
 <td><button class="cancella" (click)="cancellaUser()">CANCELLA</button></td>
-<td><button class="aggiungi" (click)="aggiungiUser()">AGGIUNGI</button></td>
-<td><button class="modifica" (click)="modificaUser()">MODIFICA</button></td>
+<td><button class="update" (click) = "updateUser()">UPDATE</button></td>
 
 
