--- a/project1/src/app/users/users.component.html
+++ b/project1/src/app/users/users.component.html
@@ -11,15 +11,12 @@
       <th>Phone</th>
       <th>Age</th>
       <th>Actions</th>
-      <th>modifica</th>
-      <th>Aggiungi</th>
-      <th> Cancella</th>
+      <th>Update</th>
     </tr>
   </thead>
     <tr app-user
       *ngFor="let user of users"[user-data]="user"
       (onCancellaUser)="onCancellaUser($event)"
-      (onSelectUser) ="onSelectUser($event)"
-      (onAggiungiUser)="Onaggiungi($event)">
+      (onSelectUser) ="onSelectUser($event)" >
     </tr>
 </table>
