new project myUserAuth

--- a/project1/src/app/app.component.html
+++ b/project1/src/app/app.component.html
@@ -1,3 +1,5 @@
+<h1>User Management system</h1>
+
 <div class="main">
   <div class="users">
     <app-users (updateUser) = "updateUser($event)"></app-users>
