--- a/project1/src/app/users/users.component.html
+++ b/project1/src/app/users/users.component.html
@@ -14,9 +14,9 @@
       <th>Update</th>
     </tr>
   </thead>
-    <tr app-user
-      *ngFor="let user of users"[user-data]="user"
-      (onCancellaUser)="onCancellaUser($event)"
-      (onSelectUser) ="onSelectUser($event)" >
-    </tr>
+  <tr app-user *ngFor="let user of users" [user-data]="user"
+    (onSelectUser)="onSelectUser($event)"
+    (onCancellaUser)="onCancellaUser($event)">
+  </tr>
 </table>
+
