--- a/project1/src/app/users/users.component.css
+++ b/project1/src/app/users/users.component.css
@@ -1,18 +1,21 @@
-table{
-  width: 100%;
+table {
+  border: 1px solid #c0c0c0;
   border-collapse: collapse;
-  border: 1px solid blue;
 }
 
-th, td {
-  border: 1px solid black;
+td,
+th {
   padding: 5px;
-  color: red;
-  background: green
-  ;
+  border: 1px solid #fff;
 }
 
-td{
-  background: silver;
-  color: brown;
+th {
+  background: #000;
+  color: green;
+
+}
+
+td {
+  background-color: silver;
+  color: red;
 }
