--- a/project1/src/app/user-detail/user-detail.component.html
+++ b/project1/src/app/user-detail/user-detail.component.html
@@ -1,40 +1,40 @@
-<form>
-
+<form #f="ngForm"> <!-- creo una variabile con template form-->
+  <input type="hidden" name="id" [(ngModel)]="user.id">
   <div class="form-group">
     <label for="nome">Nome</label>
-    <input name="nome" id="nome">
+    <input [(ngModel)]="user.name"  name="nome" id="nome">
   </div>
   <div class="form-group">
     <label for="cognome">Cognome</label>
-    <input   name="cognome" id="cognome">
+    <input [(ngModel)]="user.cognome"  name="cognome" id="cognome">
   </div>
   <div class="form-group">
     <label for="CodeceFiscale">Codece Fiscale</label>
-    <input   name="CodeceFiscale" id="CodeceFiscale">
-  </div>
+    <input [(ngModel)]="user.codicefiscale" name="fiscalcode" id="codicefiscale">  </div>
   <div class="form-group">
     <label for="provincia">provincia</label>
-    <input   name="provincia" id="provincia">
+    <input [(ngModel)]="user.province"  name="provincia" id="provincia">
   </div>
   <div class="form-group">
     <label for="city">City</label>
-    <input   name="city" id="city">
+    <input [(ngModel)]="user.city"  name="city" id="city">
   </div>
   <div class="form-group">
     <label for="phone">Phone</label>
-    <input   name="phone" id="phone">
+    <input [(ngModel)]="user.phone"  name="phone" id="phone">
   </div>
   <div class="form-group">
     <label for="email">Email</label>
-    <input   type="email" name="email" id="email">
+    <input [(ngModel)]="user.email"  type="email" name="email" id="email">
   </div>
   <div class="form-group">
     <label   for="age">Age</label>
-    <input   type="number" name="age" id="age">
+    <input [(ngModel)]="user.age"   type="text" name="age" id="age">
   </div>
 
   <div class="form-group form-footer">
+    <button class="reset" (click)="resetForm(f.form)">RESET</button>
+    <button class="btn-save" (click)="saveUser()"> SAVE</button>
 
-    <button class="btn-save"> SAVE</button>
   </div>
 </form>
