--- a/project1/src/app/user/user.component.css
+++ b/project1/src/app/user/user.component.css
@@ -5,7 +5,7 @@ th {
 }
 
 th {
-  background: #d7c5c5;
+  background: #2faec7;
   color: green;
 
 }
@@ -17,16 +17,16 @@ td {
 
 button {
   padding: 5px;
-  border: 1px solid #222;
+  border: 1px solid #5bb3cb;
   width: 80px;
 }
 
 button.cancella {
-  background: white;
-  color: red;
+  background: red;
+  color: #fff;
  }
 
- button.update{
-  background-color: #fff;
-  color: green;
- }
+button.update {
+  background: #26c76b;
+  color: #fff;
+}
